--- a/chicago_parking_reform_map.Rmd
+++ b/chicago_parking_reform_map.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Dude, Where's My Parking Requirement? Chicago Says You Don't Need One"
-author: "Michael McLean | [mclean.bsky.social](mclean.bsky.social)"
+title: "Dude, Where's My Parking Mandate? Chicago Says You Don't Need One"
+author: "Michael McLean | mclean.bsky.social"
 date: "`r Sys.Date()`"
 output:
   html_document:
@@ -417,7 +417,7 @@ parking_map <- leaflet() %>%
     fillOpacity = 0.15, 
     color = "#000000", 
     weight = 0.7,
-    group = "Downtown Carve-out (D-districts)",
+    group = "Admin Adjustment Required ('D' districts)",
     popup = "Downtown district - parking requirements remain"
   ) %>%
   
@@ -461,7 +461,7 @@ parking_map <- leaflet() %>%
   addLayersControl(
     overlayGroups = c("No Parking Requirements", 
                      "Admin Adjustment Required (Metra-only)",
-                     "Downtown Carve-out (D-districts)", 
+                     "Admin Adjustment Required ('D' districts)", 
                      "CTA Rail Stations", 
                      "Metra Stations"),
     options = layersControlOptions(collapsed = FALSE)
@@ -473,14 +473,14 @@ parking_map <- leaflet() %>%
     colors = c("#6B46C1", "#F97316", "#000000"),
     labels = c("No Parking Requirements", 
                "Admin Adjustment Required", 
-               "Downtown Carve-out"),
+               "Admin Adjustment Required ('D' districts)"),
     title = "Parking Elimination Zones",
     opacity = 0.7
   ) %>%
   
   # Hide all groups except the main one
   hideGroup("Admin Adjustment Required (Metra-only)") %>%
-  hideGroup("Downtown Carve-out (D-districts)") %>%
+  hideGroup("Admin Adjustment Required ('D' districts)") %>%
   hideGroup("CTA Rail Stations") %>%
   hideGroup("Metra Stations") %>%
 
